--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -29,8 +29,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="juW-cx-dm1">
-                                <rect key="frame" x="138" y="106" width="139" height="47"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="juW-cx-dm1">
+                                <rect key="frame" x="143" y="106" width="128.5" height="47"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Movies">
                                         <attributes>
@@ -228,21 +228,70 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="35"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BmE-l3-zWy">
-                                <rect key="frame" x="95" y="179" width="225" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="748-7s-WG8">
+                                <rect key="frame" x="100" y="172" width="244" height="42"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fOQ-eV-hfr" userLabel="Search bar">
+                                        <rect key="frame" x="43" y="1" width="173" height="41"/>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="28"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
+                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pGf-rr-aLh">
+                                        <rect key="frame" x="221" y="9" width="23" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="23" id="9ur-bE-duZ"/>
+                                            <constraint firstAttribute="height" constant="24" id="YeW-xb-t34"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="multiply" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25" weight="medium"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="hideSearchBarPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Cq-zn-FL7"/>
+                                        </connections>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dcp-kb-aMH">
+                                        <rect key="frame" x="0.0" y="6" width="32" height="30"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="8J6-7L-ApC"/>
+                                            <constraint firstAttribute="width" constant="32" id="htK-vC-i8V"/>
+                                        </constraints>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="dcp-kb-aMH" firstAttribute="leading" secondItem="748-7s-WG8" secondAttribute="leading" id="6N8-vl-tZH"/>
+                                    <constraint firstItem="dcp-kb-aMH" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" id="Dfc-dS-cDc"/>
+                                    <constraint firstItem="pGf-rr-aLh" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" id="Ekd-LK-kAA"/>
+                                    <constraint firstItem="pGf-rr-aLh" firstAttribute="leading" secondItem="fOQ-eV-hfr" secondAttribute="trailing" constant="5" id="Gze-Tb-II1"/>
+                                    <constraint firstItem="fOQ-eV-hfr" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" constant="0.5" id="HoG-1T-2Ho"/>
+                                    <constraint firstItem="fOQ-eV-hfr" firstAttribute="leading" secondItem="dcp-kb-aMH" secondAttribute="trailing" constant="11" id="pXR-ch-8sF"/>
+                                    <constraint firstAttribute="trailing" secondItem="pGf-rr-aLh" secondAttribute="trailing" id="ptN-xk-NRc"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="FYQ-BU-rOB" secondAttribute="trailing" id="1Ho-P2-Fdt"/>
                             <constraint firstItem="juW-cx-dm1" firstAttribute="top" secondItem="Pmc-Hv-Fnt" secondAttribute="bottom" constant="62" id="4aI-py-TlJ"/>
+                            <constraint firstAttribute="trailing" secondItem="748-7s-WG8" secondAttribute="trailing" constant="70" id="6An-T6-bdF"/>
                             <constraint firstItem="FYQ-BU-rOB" firstAttribute="top" secondItem="dGz-PD-GAg" secondAttribute="bottom" constant="26" id="8sJ-Ow-bDd"/>
                             <constraint firstItem="ez0-cj-7SD" firstAttribute="top" secondItem="Pmc-Hv-Fnt" secondAttribute="bottom" constant="51" id="Aa3-sm-Eji"/>
                             <constraint firstItem="FYQ-BU-rOB" firstAttribute="top" secondItem="juW-cx-dm1" secondAttribute="bottom" constant="18" id="KKZ-dC-gsh"/>
+                            <constraint firstItem="MB2-Ua-fCe" firstAttribute="top" secondItem="748-7s-WG8" secondAttribute="bottom" constant="648" id="KzV-jq-dpP"/>
                             <constraint firstItem="MB2-Ua-fCe" firstAttribute="top" secondItem="FYQ-BU-rOB" secondAttribute="bottom" id="Pjw-7O-bDh"/>
                             <constraint firstItem="dGz-PD-GAg" firstAttribute="top" secondItem="Pmc-Hv-Fnt" secondAttribute="bottom" constant="71" id="Woe-rm-xDX"/>
+                            <constraint firstItem="748-7s-WG8" firstAttribute="leading" secondItem="ez0-cj-7SD" secondAttribute="trailing" constant="15" id="Yob-J2-rFa"/>
+                            <constraint firstItem="748-7s-WG8" firstAttribute="top" secondItem="juW-cx-dm1" secondAttribute="bottom" constant="19" id="aCs-Qg-Wlo"/>
                             <constraint firstItem="NPd-1l-R0v" firstAttribute="top" secondItem="Pmc-Hv-Fnt" secondAttribute="bottom" constant="69" id="dbh-9X-rR9"/>
                             <constraint firstItem="dGz-PD-GAg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="35" id="h84-2R-aOs"/>
                             <constraint firstAttribute="trailing" secondItem="NPd-1l-R0v" secondAttribute="trailing" constant="35" id="jLK-rr-MOs"/>
@@ -254,7 +303,8 @@
                     <connections>
                         <outlet property="menuView" destination="ez0-cj-7SD" id="3Qw-Ud-7sY"/>
                         <outlet property="menuViewHeight" destination="i0d-7Y-2zX" id="DCH-5w-WEc"/>
-                        <outlet property="searchView" destination="BmE-l3-zWy" id="emI-Wa-vDl"/>
+                        <outlet property="searchBar" destination="fOQ-eV-hfr" id="fgZ-1b-Dmd"/>
+                        <outlet property="searchView" destination="748-7s-WG8" id="EGZ-ev-tYr"/>
                         <outlet property="showMenuButton" destination="dGz-PD-GAg" id="BQq-se-jj9"/>
                         <outlet property="starMenuItem" destination="2er-Hz-fwG" id="CuZ-Bx-3Hr"/>
                         <outlet property="tableView" destination="FYQ-BU-rOB" id="4Am-0g-H1k"/>
@@ -606,6 +656,7 @@
         <image name="full_star_white" width="36" height="34"/>
         <image name="magnifyingglass" catalog="system" width="64" height="56"/>
         <image name="menu" width="25" height="25"/>
+        <image name="multiply" catalog="system" width="64" height="54"/>
         <image name="plus" catalog="system" width="64" height="56"/>
         <image name="wave_bg" width="415.5" height="247.5"/>
     </resources>
