--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="28" weight="semibold"/>
                                         </state>
                                         <connections>
-                                            <action selector="showSearchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CpK-8k-adV"/>
+                                            <action selector="showSearchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cKN-si-Sd7"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2er-Hz-fwG">
@@ -214,28 +214,40 @@
                                         </constraints>
                                         <state key="normal" backgroundImage="full_star_white"/>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bqb-YZ-GKo" userLabel="Hide Search Button">
+                                        <rect key="frame" x="20" y="21" width="30" height="29.5"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="multiply" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="32" weight="medium"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="hideSearchBarPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aKA-bR-9xC"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="cOd-Ac-kXJ" firstAttribute="top" secondItem="ez0-cj-7SD" secondAttribute="top" constant="20" id="Nd4-5G-Eji"/>
+                                    <constraint firstItem="bqb-YZ-GKo" firstAttribute="top" secondItem="ez0-cj-7SD" secondAttribute="top" constant="21" id="Ntq-mG-X5y"/>
                                     <constraint firstAttribute="width" constant="70" id="PB0-jW-f3B"/>
                                     <constraint firstAttribute="height" constant="135" id="i0d-7Y-2zX"/>
                                     <constraint firstItem="cOd-Ac-kXJ" firstAttribute="centerX" secondItem="ez0-cj-7SD" secondAttribute="centerX" id="iK3-jF-jV8"/>
                                     <constraint firstItem="2er-Hz-fwG" firstAttribute="centerX" secondItem="ez0-cj-7SD" secondAttribute="centerX" id="jlJ-IZ-a3f"/>
                                     <constraint firstAttribute="bottom" secondItem="2er-Hz-fwG" secondAttribute="bottom" constant="25" id="lmz-4V-DOv"/>
+                                    <constraint firstItem="bqb-YZ-GKo" firstAttribute="centerX" secondItem="ez0-cj-7SD" secondAttribute="centerX" id="qye-vH-Wc9"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="35"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="748-7s-WG8">
-                                <rect key="frame" x="100" y="172" width="244" height="42"/>
+                                <rect key="frame" x="100" y="172" width="244" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fOQ-eV-hfr" userLabel="Search bar">
-                                        <rect key="frame" x="43" y="1" width="173" height="41"/>
+                                        <rect key="frame" x="52" y="2" width="192" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="28"/>
+                                        <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="26"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
@@ -243,20 +255,6 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pGf-rr-aLh">
-                                        <rect key="frame" x="221" y="9" width="23" height="24"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="23" id="9ur-bE-duZ"/>
-                                            <constraint firstAttribute="height" constant="24" id="YeW-xb-t34"/>
-                                        </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="multiply" catalog="system">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25" weight="medium"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="hideSearchBarPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Cq-zn-FL7"/>
-                                        </connections>
-                                    </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dcp-kb-aMH">
                                         <rect key="frame" x="0.0" y="6" width="32" height="30"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -270,12 +268,10 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="dcp-kb-aMH" firstAttribute="leading" secondItem="748-7s-WG8" secondAttribute="leading" id="6N8-vl-tZH"/>
-                                    <constraint firstItem="dcp-kb-aMH" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" id="Dfc-dS-cDc"/>
-                                    <constraint firstItem="pGf-rr-aLh" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" id="Ekd-LK-kAA"/>
-                                    <constraint firstItem="pGf-rr-aLh" firstAttribute="leading" secondItem="fOQ-eV-hfr" secondAttribute="trailing" constant="5" id="Gze-Tb-II1"/>
-                                    <constraint firstItem="fOQ-eV-hfr" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" constant="0.5" id="HoG-1T-2Ho"/>
-                                    <constraint firstItem="fOQ-eV-hfr" firstAttribute="leading" secondItem="dcp-kb-aMH" secondAttribute="trailing" constant="11" id="pXR-ch-8sF"/>
-                                    <constraint firstAttribute="trailing" secondItem="pGf-rr-aLh" secondAttribute="trailing" id="ptN-xk-NRc"/>
+                                    <constraint firstItem="dcp-kb-aMH" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" constant="-4" id="Dfc-dS-cDc"/>
+                                    <constraint firstItem="fOQ-eV-hfr" firstAttribute="centerY" secondItem="748-7s-WG8" secondAttribute="centerY" constant="-3.5" id="HoG-1T-2Ho"/>
+                                    <constraint firstAttribute="trailing" secondItem="fOQ-eV-hfr" secondAttribute="trailing" id="YTp-q9-FP1"/>
+                                    <constraint firstItem="fOQ-eV-hfr" firstAttribute="leading" secondItem="dcp-kb-aMH" secondAttribute="trailing" constant="20" id="pXR-ch-8sF"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -287,7 +283,7 @@
                             <constraint firstItem="FYQ-BU-rOB" firstAttribute="top" secondItem="dGz-PD-GAg" secondAttribute="bottom" constant="26" id="8sJ-Ow-bDd"/>
                             <constraint firstItem="ez0-cj-7SD" firstAttribute="top" secondItem="Pmc-Hv-Fnt" secondAttribute="bottom" constant="51" id="Aa3-sm-Eji"/>
                             <constraint firstItem="FYQ-BU-rOB" firstAttribute="top" secondItem="juW-cx-dm1" secondAttribute="bottom" constant="18" id="KKZ-dC-gsh"/>
-                            <constraint firstItem="MB2-Ua-fCe" firstAttribute="top" secondItem="748-7s-WG8" secondAttribute="bottom" constant="648" id="KzV-jq-dpP"/>
+                            <constraint firstItem="MB2-Ua-fCe" firstAttribute="top" secondItem="748-7s-WG8" secondAttribute="bottom" constant="640" id="KzV-jq-dpP"/>
                             <constraint firstItem="MB2-Ua-fCe" firstAttribute="top" secondItem="FYQ-BU-rOB" secondAttribute="bottom" id="Pjw-7O-bDh"/>
                             <constraint firstItem="dGz-PD-GAg" firstAttribute="top" secondItem="Pmc-Hv-Fnt" secondAttribute="bottom" constant="71" id="Woe-rm-xDX"/>
                             <constraint firstItem="748-7s-WG8" firstAttribute="leading" secondItem="ez0-cj-7SD" secondAttribute="trailing" constant="15" id="Yob-J2-rFa"/>
@@ -301,12 +297,13 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="hideSearchButton" destination="bqb-YZ-GKo" id="yxQ-pQ-ZJQ"/>
                         <outlet property="menuView" destination="ez0-cj-7SD" id="3Qw-Ud-7sY"/>
                         <outlet property="menuViewHeight" destination="i0d-7Y-2zX" id="DCH-5w-WEc"/>
                         <outlet property="searchBar" destination="fOQ-eV-hfr" id="fgZ-1b-Dmd"/>
                         <outlet property="searchView" destination="748-7s-WG8" id="EGZ-ev-tYr"/>
                         <outlet property="showMenuButton" destination="dGz-PD-GAg" id="BQq-se-jj9"/>
-                        <outlet property="showSearchButton" destination="cOd-Ac-kXJ" id="v3N-zY-xND"/>
+                        <outlet property="showSearchButton" destination="cOd-Ac-kXJ" id="ccQ-6G-2NS"/>
                         <outlet property="starMenuItem" destination="2er-Hz-fwG" id="CuZ-Bx-3Hr"/>
                         <outlet property="tableView" destination="FYQ-BU-rOB" id="4Am-0g-H1k"/>
                         <segue destination="Bjh-3o-FVc" kind="presentation" identifier="segHomeToDetail" modalPresentationStyle="fullScreen" id="plb-Vd-SAr"/>
